--- a/articles/azure-databricks/TOC.yml
+++ b/articles/azure-databricks/TOC.yml
@@ -1,64 +1,73 @@
+items:
 - name: Dokumentation om Azure Databricks
   href: index.yml
 - name: Översikt
   items:
-    - name: Vad är Azure Databricks?
-      href: what-is-azure-databricks.md
+  - name: Vad är Azure Databricks?
+    href: what-is-azure-databricks.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: Skapa en Databricks-arbetsyta – portalen
-      href: quickstart-create-databricks-workspace-portal.md
-    - name: Skapa en Databricks-arbetsyta – Resource Manager-mall
-      href: quickstart-create-databricks-workspace-resource-manager-template.md
+  - name: Skapa en Databricks-arbetsyta – portalen
+    href: quickstart-create-databricks-workspace-portal.md
+  - name: Skapa en Databricks-arbetsyta – Resource Manager-mall
+    href: quickstart-create-databricks-workspace-resource-manager-template.md
+  expanded: true
 - name: Självstudier
   items:
-    - name: Utföra ETL-åtgärder
-      href: databricks-extract-load-sql-data-warehouse.md
-    - name: Strömma data med Event Hubs
-      href: databricks-stream-from-eventhubs.md
-    - name: Attitydanalys med Cognitive Services
-      href: databricks-sentiment-analysis-cognitive-services.md
-    - name: Strömma data från HDInsight Kafka
-      href: 'https://docs.azuredatabricks.net/spark/latest/structured-streaming/kafka.html'
+  - name: Utföra ETL-åtgärder
+    href: databricks-extract-load-sql-data-warehouse.md
+  - name: Strömma data med Event Hubs
+    href: databricks-stream-from-eventhubs.md
+  - name: Attitydanalys med Cognitive Services
+    href: databricks-sentiment-analysis-cognitive-services.md
+  - name: Strömma data från HDInsight Kafka
+    href: https://docs.azuredatabricks.net/spark/latest/structured-streaming/kafka.html
 - name: Instruktionsguider
   items:
-    - name: Skapa ett Spark-kluster
-      href: 'https://docs.azuredatabricks.net/user-guide/clusters/index.html'
-    - name: Arbeta med bärbara datorer
-      href: 'https://docs.azuredatabricks.net/user-guide/notebooks/index.html'
-    - name: Köra Spark-jobb
-      href: 'https://docs.azuredatabricks.net/user-guide/jobs.html'
-    - name: Anslut till datakällor
-      href: databricks-connect-to-data-sources.md
-    - name: Använda tillsammans med Azure Data Factory
-      href: ../data-factory/transform-data-using-databricks-notebook.md
-      maintainContext: true
-    - name: 'Ansluta till Excel, R och Python'
-      href: connect-databricks-excel-python-r.md
-    - name: Använda Databricks CLI från Azure Cloud Shell
-      href: databricks-cli-from-azure-cloud-shell.md
-    - name: Använda BI-verktyg
-      href: 'https://docs.azuredatabricks.net/user-guide/bi/index.html'
+  - name: Skapa ett Spark-kluster
+    href: https://docs.azuredatabricks.net/user-guide/clusters/index.html
+  - name: Arbeta med bärbara datorer
+    href: https://docs.azuredatabricks.net/user-guide/notebooks/index.html
+  - name: Köra Spark-jobb
+    href: https://docs.azuredatabricks.net/user-guide/jobs.html
+  - name: Anslut till datakällor
+    href: databricks-connect-to-data-sources.md
+  - name: Använda tillsammans med Azure Data Factory
+    href: ../data-factory/transform-data-using-databricks-notebook.md
+    maintainContext: true
+  - name: Ansluta till Excel, R och Python
+    href: connect-databricks-excel-python-r.md
+  - name: Använda Databricks CLI från Azure Cloud Shell
+    href: databricks-cli-from-azure-cloud-shell.md
+  - name: Använda BI-verktyg
+    href: https://docs.azuredatabricks.net/user-guide/bi/index.html
+  - name: Planera haveriberedskap
+    href: howto-regional-disaster-recovery.md
 - name: Referens
   items:
-    - name: REST-API
-      href: /rest/api/databricks
+  - name: REST-API
+    href: /rest/api/databricks
 - name: Resurser
   items:
-    - name: Vanliga frågor
-      href: frequently-asked-questions-databricks.md
-    - name: Viktig information
-      href: 'https://docs.azuredatabricks.net/release-notes/index.html'
-    - name: Dokumentation för Databricks
-      href: 'https://docs.azuredatabricks.net/user-guide/index.html'
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/?category=analytics'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/databricks/'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/questions/tagged/azure-databricks'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/regions/services/'
-    - name: Supportalternativ
-      href: 'https://azure.microsoft.com/support/options/'
+  - name: Vanliga frågor
+    href: frequently-asked-questions-databricks.md
+  - name: Viktig information
+    href: https://docs.azuredatabricks.net/release-notes/index.html
+  - name: Dokumentation för Databricks
+    href: https://docs.azuredatabricks.net/user-guide/index.html
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/?category=analytics
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/databricks/
+  - name: Stack Overflow
+    href: https://stackoverflow.com/questions/tagged/azure-databricks
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/regions/services/
+  - name: Supportalternativ
+    href: https://azure.microsoft.com/support/options/
+ms.openlocfilehash: ad9351e33f87897a1b9d1d99a6d7317835b8ce10
+ms.sourcegitcommit: baed5a8884cb998138787a6ecfff46de07b8473d
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/28/2018
+ms.locfileid: "43115195"
