--- a/articles/containers/index.yml
+++ b/articles/containers/index.yml
@@ -1,10 +1,16 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 96f767e96bcebeadfd0557d64b8efbf45b9f9a39
+ms.sourcegitcommit: 63613e4c7edf1b1875a2974a29ab2a8ce5d90e3b
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/29/2018
+ms.locfileid: "43187572"
 documentType: LandingData
 title: Azure for Containers
 metadata:
   document_id: 
   title: Azure for Containers – Självstudier, API-referens
-  description: Kom igång med att utveckla appar med Azure och använd resurserna nedan för att hitta bra snabbstarter, självstudier och verktyg för behållare.
+  description: Kom igång med att utveckla appar med Azure och använd resurserna nedan för att hitta bra snabbstarter, självstudier och verktyg för containrar.
   keywords: Azure, Containers, Docker, API, Kubernetes
   author: bketelsen
   ms.author: brketels
@@ -17,17 +23,11 @@ metadata:
   ms.technology: azure
   ms.devlang: multiple
   ms.service: multiple
-  ms.openlocfilehash: 39de19dc8c536d33150b9da368a2236ef8571ef3
-  ms.sourcegitcommit: e221d1a2e0fb245610a6dd886e7e74c362f06467
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/07/2018
-  ms.locfileid: "33768353"
 sections:
 - items:
   - type: markdown
     text: >
-      Kom igång med att utveckla appar med Azure och använd resurserna nedan för att hitta bra självstudier och verktyg för behållare.
+      Kom igång med att utveckla appar med Azure och använd resurserna nedan för att hitta bra självstudier och verktyg för containrar.
 - items:
   - type: list
     style: cards
@@ -47,7 +47,7 @@ sections:
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: Lär dig hur du använder behållare med Azure-tjänster.
+    text: Lär dig hur du använder containrar med Azure-tjänster.
   - type: list
     style: cards
     className: cardsM
@@ -58,7 +58,7 @@ sections:
       image:
         src: /azure/media/index/ContainerService.svg
     - href: https://docs.microsoft.com/azure/service-fabric/service-fabric-quickstart-containers
-      title: Distribuera ett Windows-behållarprogram med Service Fabric
+      title: Distribuera ett Windows-containerprogram med Service Fabric
       image:
         src: /azure/media/index/Fabric.svg
     - href: https://docs.microsoft.com/azure/app-service/containers/quickstart-docker-go
@@ -69,25 +69,25 @@ sections:
       title: Skapa ett privat Docker-register i Azure Container Registry
       image:
         src: /azure/media/index/container-registry.svg
-- title: Kostnadsfri videoutbildning för Pluralsight för Azure och behållare
+- title: Kostnadsfri videoutbildning för Pluralsight
   items:
   - type: list
     style: cards
     className: cardsM
     columns: 3
     items:
-    - href: https://www.pluralsight.com/courses/azure-vms-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
+    - href: https://go.microsoft.com/fwlink/?linkid=2012827
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-      title: Microsoft Azure Virtual Machines – Komma igång
+      title: " Azure-administratör"
 - title: Exempel
   items:
   - type: list
     style: unordered
     items:
     - html: <a href="https://azure.microsoft.com/resources/samples/app-service-java-deploy-image-from-acr-to-linux/">Kom igång med App Service – Hantera Linux-webbapp med Container Registry – i Java</a>
-    - html: <a href="https://azure.microsoft.com/resources/samples/service-fabric-containers/">Exempel på behållare för Service Fabric</a>
-    - html: <a href="https://azure.microsoft.com/resources/samples/container-service-python-manage/">Distribuera och anslut en Docker-behållare i ett Azure-kluster</a>
+    - html: <a href="https://azure.microsoft.com/resources/samples/service-fabric-containers/">Exempel på container för Service Fabric</a>
+    - html: <a href="https://azure.microsoft.com/resources/samples/container-service-python-manage/">Distribuera och anslut en Docker-container i ett Azure-kluster</a>
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
