--- a/articles/monitoring-and-diagnostics/index.yml
+++ b/articles/monitoring-and-diagnostics/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: f0e134314439c4ef650ac8551f4a246b6e59fe7b
+ms.sourcegitcommit: 63613e4c7edf1b1875a2974a29ab2a8ce5d90e3b
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/29/2018
+ms.locfileid: "43185238"
 documentType: LandingData
 title: Dokumentation om Azure Monitor
 metadata:
@@ -12,12 +18,6 @@ metadata:
   ms.topic: landing-page
   ms.date: 09/18/2017
   ms.author: robb
-  ms.openlocfilehash: af90087551b41a64b140a79ad527a713b5f1697e
-  ms.sourcegitcommit: 5a7f13ac706264a45538f6baeb8cf8f30c662f8f
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/29/2018
-  ms.locfileid: "37111913"
 abstract:
   description: Azure Monitor är en del av Microsoft Azures övergripande övervakningslösning. Med Azure Monitor kan du spåra prestanda, underhålla säkerhet och identifiera trender. Lär dig att granska, skapa aviseringar och arkivera data med våra snabbstarter och självstudier.
 sections:
@@ -51,16 +51,11 @@ sections:
     style: cards
     className: cardsFTitle
     items:
-    - title: Kom igång med IaaS-övervakning
-      href: https://app.pluralsight.com/library/courses/azure-iaas-monitoring-management-getting-started/table-of-contents
+    - title: Azure-administratör
+      href: https://go.microsoft.com/fwlink/?linkid=2012827
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/azure-iaas-monitoring-management-getting-started/table-of-contents
-    - title: Hantera infrastruktur i Microsoft Azure
-      href: https://app.pluralsight.com/library/courses/managing-infrastructure-microsoft-azure-getting-started
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/managing-infrastructure-microsoft-azure-getting-started
+        href: https://go.microsoft.com/fwlink/?linkid=2012827
 - title: Referens
   items:
   - type: list
