--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -57,8 +57,10 @@ items:
     href: security-center-monitoring.md
     items:
     - name: Säkerhet för Compute och appar
-      href: security-center-virtual-machine-recommendations.md
+      href: security-center-virtual-machine-protection.md
       items:
+      - name: Rekommendationer för virtuella datorer
+        href: security-center-virtual-machine-recommendations.md
       - name: Tillämpa diskkryptering
         href: security-center-apply-disk-encryption.md
       - name: Tillämpa systemuppdateringar
@@ -143,6 +145,8 @@ items:
       href: security-center-custom-alert.md
     - name: Aviseringsverifiering
       href: security-center-alert-validation.md
+    - name: Förtroendepoäng för avisering
+      href: security-center-confidence-score.md
     - name: Karta för hotinformation
       href: security-center-threat-intel.md
     - name: Undersökning
@@ -183,10 +187,6 @@ items:
     href: security-center-faq.md
   - name: Plattformar som stöds
     href: security-center-os-coverage.md
-  - name: Plattformsmigrering
-    href: security-center-platform-migration.md
-  - name: Vanliga frågor och svar om plattformsmigrering
-    href: security-center-platform-migration-faq.md
   - name: Planering och drift
     href: security-center-planning-and-operations-guide.md
   - name: Säkerhet i Azure
@@ -207,9 +207,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=security-center
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: c382c8e4d17352d7f87e82fe9a03a4c2e30880b8
-ms.sourcegitcommit: 58c5cd866ade5aac4354ea1fe8705cee2b50ba9f
+ms.openlocfilehash: 62f713d5e0412eef2cb4dbb176e355371cbc924a
+ms.sourcegitcommit: 2ad510772e28f5eddd15ba265746c368356244ae
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/24/2018
-ms.locfileid: "42810182"
+ms.lasthandoff: 08/28/2018
+ms.locfileid: "43126410"
