--- a/articles/virtual-network/index.yml
+++ b/articles/virtual-network/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: edf14b451872addf3c2abb368170fc54383ceb94
+ms.sourcegitcommit: 63613e4c7edf1b1875a2974a29ab2a8ce5d90e3b
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/29/2018
+ms.locfileid: "43186622"
 documentType: LandingData
 title: Dokumentation om Virtual Network
 metadata:
@@ -14,12 +20,6 @@ metadata:
   ms.topic: landing-page
   ms.date: 03/23/2018
   ms.author: jdial
-  ms.openlocfilehash: 7d6e02f7031c8414d28fba8e1baab8b35eb14968
-  ms.sourcegitcommit: 638599eb548e41f341c54e14b29480ab02655db1
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/21/2018
-  ms.locfileid: "36309679"
 abstract:
   description: Lär dig hur du använder Azure Virtual Network. Våra snabbstarter, självstudier och exempel med mera visar dig hur du distribuerar ett virtuellt nätverk, styr trafikfiltrering och routning samt ansluter ett virtuellt nätverk till andra virtuella nätverk.
 sections:
@@ -59,17 +59,17 @@ sections:
     style: cards
     className: cardsFTitle
     items:
-    - title: Implementera Microsoft Azure-nätverk
-      href: https://app.pluralsight.com/library/courses/microsoft-azure-networking-implementing/table-of-contents
+    - title: Azure-administratör
+      href: https://go.microsoft.com/fwlink/?linkid=2012827
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/microsoft-azure-networking-implementing/table-of-contents
-    - title: Planering och design av lösningar för Microsoft Azure-nätverk
-      href: https://app.pluralsight.com/library/courses/planning-designing-microsoft-azure-network-solutions/table-of-contents
+        href: https://go.microsoft.com/fwlink/?linkid=2012827
+    - title: Azure-lösningsarkitekt
+      href: https://go.microsoft.com/fwlink/?linkid=2012824
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/planning-designing-microsoft-azure-network-solutions/table-of-contents
-    - title: Microsoft Azure-administration för AWS-administratörer
+        href: https://go.microsoft.com/fwlink/?linkid=2012824
+    - title: Azure-administration för AWS-administratörer
       href: https://app.pluralsight.com/library/courses/azure-administration-aws-administrators/table-of-contents
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
