--- a/articles/vpn-gateway/index.yml
+++ b/articles/vpn-gateway/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 881c0c5f6741c661f3c36cdf2efe1b113574089e
+ms.sourcegitcommit: 63613e4c7edf1b1875a2974a29ab2a8ce5d90e3b
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/29/2018
+ms.locfileid: "43185915"
 documentType: LandingData
 title: Dokumentation om Azure VPN Gateway
 metadata:
@@ -14,12 +20,6 @@ metadata:
   ms.topic: landing-page
   ms.date: 04/26/2018
   ms.author: cherylmc
-  ms.openlocfilehash: c5bfd0789a2fdc2effe3e750404c3fa1c3f1b045
-  ms.sourcegitcommit: ca05dd10784c0651da12c4d58fb9ad40fdcd9b10
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/03/2018
-  ms.locfileid: "32779508"
 abstract:
   description: Lär dig hur du konfigurerar, skapar och hanterar Azure VPN Gateway. Skapa krypterade anslutningar mellan olika platser till det virtuella nätverket från lokala platser, eller skapa krypterade anslutningar mellan virtuella nätverk.
 sections:
@@ -38,16 +38,16 @@ sections:
     style: cards
     className: cardsFTitle
     items:
-    - title: Implementera Microsoft Azure-nätverk
-      href: https://app.pluralsight.com/library/courses/microsoft-azure-networking-implementing/table-of-contents
+    - title: Azure-administratör
+      href: https://go.microsoft.com/fwlink/?linkid=2012827
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/microsoft-azure-networking-implementing/table-of-contents
-    - title: Planering och design av lösningar för Microsoft Azure-nätverk
-      href: https://app.pluralsight.com/library/courses/planning-designing-microsoft-azure-network-solutions/table-of-contents
+        href: https://go.microsoft.com/fwlink/?linkid=2012827
+    - title: Azure-lösningsarkitekt
+      href: https://go.microsoft.com/fwlink/?linkid=2012824
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/planning-designing-microsoft-azure-network-solutions/table-of-contents
+        href: https://go.microsoft.com/fwlink/?linkid=2012824
 - title: Exempel
   items:
   - type: paragraph
