--- a/articles/iot-accelerators/toc.yml
+++ b/articles/iot-accelerators/toc.yml
@@ -88,7 +88,7 @@ items:
     - name: Visualisera telemetri med PowerBI
       href: iot-accelerators-integrate-data-powerbi.md
     - name: Visualisera telemetri med Time Series Insights
-      href: iot-accelerators-time-series-insights.md
+      href: iot-accelerators-remote-monitoring-time-series-insights.md
     - name: Analysera telemetri med Data Lake
       href: iot-accelerators-integrate-data-lake.md
     - name: Konfigurera rollbaserad åtkomstkontroll
@@ -166,6 +166,8 @@ items:
       href: iot-accelerators-device-simulation-choose-hub.md
     - name: Använd en anpassad enhetsmodell
       href: iot-accelerators-device-simulation-custom-model.md
+    - name: Visualisera telemetri med Time Series Insights
+      href: iot-accelerators-device-simulation-time-series-insights.md
     - name: Skapa en simulerad enhet
       href: iot-accelerators-device-simulation-create-simulated-device.md
     - name: Distribuera en simulerad enhet
@@ -250,9 +252,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-iot-suite
   - name: Utbildningsväg för IoT-lösningsacceleratorer
     href: https://azure.microsoft.com/documentation/learning-paths/iot-suite/
-ms.openlocfilehash: 1770dbe5a88b4a8ac4dc036fb837c066291efb99
-ms.sourcegitcommit: 0c64460a345c89a6b579b1d7e273435a5ab4157a
+ms.openlocfilehash: db9024fd8dc263d7d11fe522d934a629289ef922
+ms.sourcegitcommit: a3a0f42a166e2e71fa2ffe081f38a8bd8b1aeb7b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/31/2018
-ms.locfileid: "43339491"
+ms.lasthandoff: 09/01/2018
+ms.locfileid: "43381645"
