--- a/articles/key-vault/index.yml
+++ b/articles/key-vault/index.yml
@@ -1,26 +1,24 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: b84be8ce441796d82411ebd56e31d93062bccdcc
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: 56697748a44cc3664e928639da09e6e604b03651
+ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 09/24/2018
-ms.locfileid: "46959724"
+ms.locfileid: "47035869"
 documentType: LandingData
 title: Dokumentation om Key Vault
 metadata:
   title: Dokumentation om Azure Key Vault – Självstudier, API-referens | Microsoft Docs
   meta.description: Learn how to use Key Vault to create and maintain keys that access and encrypt your cloud resources, apps, and solutions. Tutorials, API references, and more.
-  services: key-vault
-  author: czeumault
-  manager: carolz
+  author: barclayn
+  manager: mbaldwin
   layout: LandingPage
-  ms.assetid: 
   ms.service: key-vault
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 01/23/2017
-  ms.author: carolz
+  ms.date: 09/14/2018
+  ms.author: barclayn
 abstract:
   description: Lär dig hur du använder Key Vault för att skydda och hantera krypteringsnycklar och hemligheter som används av molnprogram och molntjänster. Självstudier, API-referenser och annan dokumentation visar hur du skapar och underhåller nycklar och hemligheter som ger åtkomst till och krypterar dina resurser och lösningar.
 sections:
